# unclick

./: .env.local.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  AUTOPILOT.md  CLAUDE.md  CONTRIBUTING.md  FLEET_SYNC.md  LICENSE  LICENSING.md  README.md  SECURITY.md  eslint.config.js  free-writer-exec-harness.mts  index.html  package-lock.json  package.json  roomtest.txt  tailwind.config.ts  tmp-5.mjs  tsconfig.app.json  vercel.json  vite.config.ts  vite.config.ts.timestamp-1779950427048-b0c4200326273.mjs  vitest.config.ts
.auto-memory/: abandoned-branches.md
.claude/: full-transcript.txt  settings.local.json
.github/: OPERATIONS.md  PULL_REQUEST_TEMPLATE.md  architecture-qc-checklist.md  dependabot.yml
api/: account-links.test.ts  account-links.ts  admin-users.ts  agent-obligations.test.ts  ai-provider-balance.ts  ai-provider-inventory.test.ts  ai-provider-key.ts  analytics.test.ts  analytics.ts  app-human-checks.test.ts  app-human-checks.ts  arena-comment-reply.ts  arena.ts  autopilot-control-ledger.test.ts  autopilotiq-circuit-breakers.test.ts  autopilotiq-outcome-ledger.test.ts  autopilotiq-probe-set.test.ts  backfill-embeddings-guardrail.test.ts  backstagepass-auth.test.ts  backstagepass-settings.ts  backstagepass.test.ts  backstagepass.ts  benchmarks.test.ts  benchmarks.ts  boardroom-read-bounds.test.ts  boardroom-signal-polish.test.ts  build.ts  capability-balance.ts  chat-threads.test.ts  chat-threads.ts  chat.test.ts  (+90 more)
apps/unclick-browser/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/unclick-browser/src-tauri/src/: main.rs
(+1227 files in other folders)
