[package]
name = "unclick-browser"
version = "0.5.9"
description = "UnClick Browser"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate"] }
